# USD

./: BUILDING.md  CHANGELOG.md  LICENSE.txt  VERSIONS.md
.github/workflows/: buildusd.yml  pypi.yml
build_scripts/: apple_utils.py  build_usd.py
cmake/defaults/: CXXDefaults.cmake  Options.cmake  Packages.cmake  Version.cmake  msvcdefaults.cmake
cmake/macros/: Private.cmake  Public.cmake
docs/: contributors.rst  dl_downloads.rst  glossary.rst  index_body.rst  intro.rst  ref_performance_metrics.rst  toc.rst  toolset.help  tut_setup_version_badge.rst  tut_xforms.rst
docs/_static/css/: pxr_custom.css
docs/_static/js/: versions.js
docs/_templates/: perf_metric_alab_template.tmpl  perf_metric_kitchenset_template.tmpl  perf_metric_moorelane_template.tmpl  perf_metric_shaderball_template.tmpl
docs/performance/: 25.08_macos_alab.yaml  25.08_macos_kitchenset.yaml  25.08_macos_moorelane.yaml  25.08_macos_shaderball.yaml  25.11_linux_alab.yaml  26.05_linux_alab.yaml  26.05_linux_kitchenset.yaml  26.05_linux_moorelane.yaml  26.05_linux_shaderball.yaml  26.05_macos_alab.yaml  26.05_macos_kitchenset.yaml  26.05_macos_moorelane.yaml  26.05_macos_shaderball.yaml  26.05_windows_alab.yaml  26.05_windows_kitchenset.yaml  26.05_windows_moorelane.yaml  26.05_windows_shaderball.yaml
docs/user_guides/: namespace_editing.rst  render_user_guide.rst  time_and_animated_values.rst  variable_expressions.rst
extras/imaging/docs/: CMakeLists.txt  hydra_getting_started_guide.dox  hydra_prim_schemas.dox  hydra_scene_debugger.dox
extras/usd/examples/wasmFetchResolver/: CMakeLists.txt  README.md  fetchResolver.cpp  fetchResolver.h  main.cpp  server.js
pxr/: CMakeLists.txt  pxrConfig.cmake.in
pxr/base/arch/: CMakeLists.txt  attributes.h  debugger.cpp  fileSystem.cpp  fileSystem.h  pragmas.h  stackTrace.cpp
pxr/base/gf/: colorSpace.h  numericCast.h
pxr/base/js/: CMakeLists.txt  json.cpp
pxr/base/tf/: CMakeLists.txt  atomicRenameUtil.cpp  debug.cpp  debug.h  diagnosticContainer.cpp  diagnosticContainer.h  diagnosticMgr.cpp  diagnosticMgr.h  diagnosticOverview.dox  diagnosticTransport.h  diagnosticTrap.cpp  diagnosticTrap.h  enum.cpp  errorMark.cpp  errorMark.h  errorTransport.h  instantiateSingleton.h  mallocTag.cpp  mallocTag.h  module.cpp  singleton.h  (+16 more)
pxr/exec/: CMakeLists.txt
pxr/usdImaging/: CMakeLists.txt
pxr/usdValidation/: CMakeLists.txt
(+948 files in other folders)
